[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-mdp"
version = "0.1.0"
description = "Cost-aware agent orchestration using explicit decision states and policies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Anik Mallick" }
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy",
    "pandas>=2.0",
    "tqdm>=4.66",
    "langchain"
]


